--- a/template/calendar.css
+++ b/template/calendar.css
@@ -19,10 +19,27 @@ th {
 
 .month_header { 
   direction: rtl; 
-  margin-top: 8px; 
-  text-align: center; 
+  background: slateblue;
   font-weight: bold; 
-  font-style: italic 
+  font-style: italic;
+  padding-bottom: 4px;
+
+  display: flex;
+  justify-content:center ;
+  align-items: center;
+}
+
+.month_header_hebrew {
+  font-size: 60px; 
+  vertical-align: middle;
+  height: 100%;
+  padding-left: 30px;
+
+}
+
+.month_header_english {
+  font-size: 40px; 
+  vertical-align: bottom;
 }
 
 
@@ -44,9 +61,16 @@ Day Layout
   border: 1px solid #A8A8A8;
 }
 
-.day-cell {
+/**
+* Sizing of cells
+**/
+.othermonthdate, .day-cell {
   height: 150px;
   width: 150px;
+
+}
+
+.day-cell {
   padding: 5px;
 
   display: flex;
@@ -55,15 +79,35 @@ Day Layout
 }
 
 .shabbat {
-  background-color: aquamarine;
+  background-color: lightblue;
 }
 
 .holiday {
-  background-color: beige;
+  background-color: cornflowerblue;
 }
 
 .plain-day {
-  background-color: white;
+  background-color: antiquewhite;
+}
+
+
+.othermonthdate {
+  background-color: #E0E0E0;
+  text-align: center;
+  
+}
+
+.fillerimg {
+  max-width: 80%;
+}
+
+
+.event-img-block {
+  text-align: center;
+}
+
+.event-img {
+  max-width: 80%;
 }
 
 /********************************
@@ -103,7 +147,7 @@ Title Section
 .birthday {
   text-align: center;
   vertical-align: middle;
-  background-color: lightsalmon;
+  background-color: goldenrod;
 };
 
 .birthday-name {
@@ -119,7 +163,7 @@ Title Section
 .yahrzeit {
   text-align: center;
   vertical-align: middle;
-  background-color:mediumorchid;
+  background-color:darkgrey;
 };
 
 .yahrzeit-name {
@@ -135,7 +179,8 @@ Title Section
 .anniv {
   display: flex;
   justify-content:center;
-  background-color: pink;
+  background-color: coral;
+  align-items: center;
 }
 
 .anniv-img {
@@ -182,12 +227,4 @@ Title Section
 
 
 
-
-#prevmonthdates {
-  background-color: #E0E0E0;
-}
-
-#nextmonthdates {
-  background-color: #E0E0E0;
-}
 
