--- a/template/calendar.css
+++ b/template/calendar.css
@@ -86,7 +86,7 @@ Day Layout
   background-color: cornflowerblue;
 }
 
-.plain-day {
+.plain-day, .minorday {
   background-color: antiquewhite;
 }
 
@@ -98,7 +98,8 @@ Day Layout
 }
 
 .fillerimg {
-  max-width: 80%;
+    max-width: 80%;
+    max-height: 140px;
 }
 
 
@@ -108,6 +109,7 @@ Day Layout
 
 .event-img {
   max-width: 80%;
+  max-height: 50px;
 }
 
 /********************************
