--- a/template/calendar.css
+++ b/template/calendar.css
@@ -91,19 +91,25 @@ Day Layout
 
 .plain-day,
 .minorday {
-  background-color: Gainsboro;
+  background-color: rgba(220, 220, 220, 0.5);
+
+  xxxbackground-color: Gainsboro;
 }
 
 .roshchodesh {
-  background-color: LightSteelBlue;
+  background-color: rgba(176, 196, 222, 0.5);
+
+  xxxbackground-color: LightSteelBlue;
 }
 
 .shabbat {
-  background-color: CornflowerBlue;
+  background-color: rgba(100, 149, 237, 0.5);
+  xxxbackground-color: CornflowerBlue;
 }
 
 .holiday {
-  background-color: RoyalBlue;
+  background-color: rgba(65, 105, 225, 0.5);
+  xxxbackground-color: RoyalBlue;
 }
 
 
@@ -158,7 +164,16 @@ Title Section
   float: left;
 }
 
-.eng-date-one {
+
+.eng-date-one-background {
+  padding: 1px;
+  xxborder: 3px solid #000;
+  background: #aaa;
+
+}
+
+
+.eng-date-one-number {
   font-weight: bold;
   border-radius: 25%;
   xxxwidth: 34px;
